test/files/neg/macro-invalidsig-ctx-noctx/Impls_1.scala
import scala.reflect.macros.{Context => Ctx}

object Impls {
  def foo(c: Ctx) = ???
}
